--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "google": "^2.1.0",
     "google-auth-library": "^10.4.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.2",
